jira_clone/force-app/main/default/objects/TicketLink__c/TicketLink__c.object-meta.xml
<CustomObject>
    <nameField>
    <label>Ticket Link Name</label>
    <type>Text</type>
</nameField>
    <description>Links between related tickets</description>
    <label>Ticket Link</label>
    <pluralLabel>Ticket Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>