jira_clone/force-app/main/default/objects/TicketLink__c/fields/LinkedFromTicket__c.field-meta.xml
<CustomField>
    <fullName>LinkedFromTicket__c</fullName>
    <description>Source ticket</description>
    <label>Linked From Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Outgoing Ticket Links</relationshipLabel>
    <relationshipName>OutgoingTicketLinks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>