jira_clone/force-app/main/default/objects/TicketLink__c/fields/LinkedToTicket__c.field-meta.xml
<CustomField>
    <fullName>LinkedToTicket__c</fullName>
    <description>Target ticket</description>
    <label>Linked To Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Incoming Ticket Links</relationshipLabel>
    <relationshipName>IncomingTicketLinks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>