jira_clone/force-app/main/default/objects/TicketLink__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Link type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocks</fullName>
            </value>
            <value>
                <fullName>Relates To</fullName>
            </value>
            <value>
                <fullName>Duplicates</fullName>
            </value>
            <value>
                <fullName>Depends On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>